--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,8 @@
 html,
 body {
-  background-color: #123123;
+  background-image: url("background.jpg");
+  background-repeat: no-repeat;
+  background-size: 110%;
 }
 
 /*.App {*/
