UI updates for presentation

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,6 @@
-html,
-body {
-  background-image: url("background.jpg");
-  background-repeat: no-repeat;
-  background-size: 110%;
-}
+/*html,*/
+/*body {*/
+/*}*/
 
 /*.App {*/
 /*  text-align: center;*/
