--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,12 @@ body {
   font-family: "Goldman", cursive;
 }
 
+body {
+    background-image: url("background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 /*body {*/
 /*  margin: 0;*/
 /*  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",*/
